--- a/SoloProject/package.json
+++ b/SoloProject/package.json
@@ -10,19 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.6.1",
+    "@react-native-async-storage/async-storage": "^1.17.12",
+    "@react-native-community/datetimepicker": "^6.7.5",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-background-fetch": "^4.1.9",
+    "react-native-collapsible": "^1.6.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
-    "styled-components": "^5.3.9"
+    "source-map-url": "^0.4.1",
+    "styled-components": "^5.3.9",
+    "urix": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
